# python-cityhash

./: .gitignore  .travis.yml  .ycm_extra_conf.py  INSTALL  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  _README.rst  circle.yml  cityhash.cpp  cityhash.pyx  cpp.mk  cpuinfo.py  create_pypirc.sh  dev-requirements.txt  install.sh  pip-freeze-extras.txt  pip-freeze.txt  pyproject.toml  python.mk  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: build-test.yml  build.yml  codeql.yml  publish.yml  superlinter.yml  wheels.yml
_github_test/workflows/: build.yml
benchmarks/: bench_city.sh  bench_farm.sh
old-configs/: .travis.yml  circle.yml
scripts/: get_build_dir.py
src/: city.cc  cityhash.c  cityhash.cpp  cityhash.pyx  cityhashcrc.cpp  cityhashcrc.pyx  farm.cc  farmhash.cpp  farmhash.pyx
tests/: cityhash64_main.cc  test_city.cc  test_cityhash.cc  test_cityhash.py  test_cityhashcrc.py  test_farmhash.py
