[project]
requires-python = ">=3.6"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "Cython",
    "py-cpuinfo",
    "setuptools",
    "wheel",
    ]

[tool.pytest.ini_options]
addopts = "-s --doctest-modules"
testpaths = [
    "src",
    "tests",
    ]

[tool.cibuildwheel]
test-requires = "pytest"
