[options]
package_dir = 
    =src

[metadata]
version = attr:cityhash.__version__
description_file = README.rst

[tool:pytest]
addopts = --doctest-modules
testpaths = 
    src tests

[flake8]
extend-ignore = E203,W503,W504
max-line-length = 120

[project]
requires-python = ">=3.6"

[build-system]
requires = Cython
           py-cpuinfo
           setuptools
           wheel

[tool.cibuildwheel]
test-requires = "pytest"
